@@ -1,0 +1,10 @@
+EXTRA_DIST = \
+	keywords.hex \
+	nobelprice.hex \
+	scientists.hex \
+	scientists_err.xml \
+	scientists.xml \
+	tests/xpath.test \
+	tests/keywords.out \
+	tests/nobelprice.out \
+	tests/scientists.out
